--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,6 +32,7 @@
                 <div class="py-3"> 
                     <label for="role">Role:</label>
                     <select name="role" id="role" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                        <option value="none" selected disabled hidden>Select an Option</option>
                         <option value="Admin">Admin</option>
                         <option value="User">User</option>
                     </select>
