signup page is functioning

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,19 +15,19 @@
             <form action="/users" method="post">
                 <div class="py-3">
                     <label for="firstName">First Name:</label>
-                    <input type="text" name="firstName" class="required border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="text" name="firstName" id="firstName" class="required border border-gray-300 text-gray-900 rounded p-2 w-full">
                 </div>
                 <div class="py-3">
                     <label for="lastName">Last Name:</label>
-                    <input type="text" name="lastName" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="text" name="lastName" id="lastName" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
                 </div>
                 <div class="py-3">
                     <label for="email">Email:</label>
-                    <input type="email" name="email" class="required border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="email" name="email" id="email" class="required border border-gray-300 text-gray-900 rounded p-2 w-full">
                 </div>  
                 <div class="py-3"> 
                     <label for="password">Password:</label>
-                    <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="password" name="password" id="password" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
                 </div>  
                 <div class="py-3"> 
                     <label for="role">Role:</label>
