--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color:white;
+    background-color:rgb(220, 218, 231);
     font-family:monospace,'Courier';
 }
 .Todo-Item:hover .trash-icon{
