--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,9 @@
     <body>
        <div class= "grid  grid-cols-6">
         <div class="col-start-3 col-span-2">
-            <h1 class="py-2">Welcome to the Sports Scheduler</h1>
-            <p class="py-2">New User? <a href="/signup" class="text-green-600"> Sign-up now </a> </p>
-            <p class="py-2">Existing User? <a href="/login" class="text-green-600">Sign-in</a></p>            
+            <h1 class="py-2 text-3xl font-bold">Welcome to the Sports Scheduler</h1>
+            <p class="py-2">New User? <a href="/signup" class="text-indigo-600"> Sign-up now </a> </p>
+            <p class="py-2">Existing User? <a href="/login" class="text-indigo-600">Sign-in</a></p>            
         </div>
        </div>
     </body>
