--- a/views/new_sport.ejs
+++ b/views/new_sport.ejs
@@ -12,26 +12,22 @@
   <body>
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
-            <h6 class="py-4 text-2xl">Login to your account</h6>
-            <form action="/session" method="post">
+            <h6 class="py-4 text-2xl">Create a new sport</h6>
+            <form action="/sport" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">                
                 <div class="py-3">
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <label for="sport_name">Enter sport's name</label>
+                    <input type="sport_name" name="sport_name" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
                 </div>  
                 <div class="py-3"> 
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
-                </div>  
-                <div class="py-3"> 
-                    <button type="submit" class="text-white bg-indigo-600 hover:bg-indigo-800 font-medium rounded px-5 py-2">Sign in</button>        
+                    <button type="submit" class="text-white bg-indigo-600 hover:bg-indigo-800 font-medium rounded px-5 py-2">Submit</button>        
                 </div>  
             </form>
             <% if(messages && messages.error && messages.error.length > 0)  { %>
-              <% for(var i=0; i<messages.error.length; i++) { %>
-                      <li> <%= messages.error[i] %></li>
+                <% for(var i=0; i<messages.error.length; i++) { %>
+                        <li> <%= messages.error[i] %></li>
+                <% } %>
               <% } %>
-            <% } %>
         </div>
     </div>
   </body>
