--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,12 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
+        <%- include("header.ejs") %>
+        <br>
        <div class= "grid  grid-cols-6">
-        <div class="col-start-3 col-span-2">
-            <h1 class="py-2 text-3xl font-bold">Welcome to the Sports Scheduler</h1>
-            <p class="py-2">New User? <a href="/signup" class="text-indigo-600"> Sign-up now </a> </p>
-            <p class="py-2">Existing User? <a href="/login" class="text-indigo-600">Sign-in</a></p>            
+        <div class="col-start-3 col-span-2"> 
+            <p class="py-2 text-xl">New User? <a href="/signup" class="text-indigo-600"> Sign-up now </a> </p>
+            <p class="py-2 text-xl">Existing User? <a href="/login" class="text-indigo-600">Sign-in</a></p>            
         </div>
        </div>
     </body>
