--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div class="grid grid-cols-6">
-        <div class="col-start-3 col-span-2">
-            <h6 class="py-4">Signup as a new user</h6>
+        <div class="col-start-3 col-span-2 bg-indigo-300 px-10 mt-10 rounded">
+            <h6 class="py-4 text-2xl font-bold">Signup as a new user</h6>
             <form action="/users" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <div class="py-3">
@@ -40,7 +40,7 @@
                     </select>
                 </div>
                 <div class="py-3"> 
-                    <button type="submit" class="text-white bg-indigo-600 hover:bg-green-800 font-medium rounded px-5 py-2">Sign up</button>        
+                    <button type="submit" class="mb-6 text-white bg-indigo-600 hover:bg-indigo-800 font-medium rounded px-5 py-2">Sign up</button>        
                 </div>  
             </form>
             <% if(messages && messages.error && messages.error.length > 0)  { %>
