--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,8 +13,14 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
           <h1 class="py-4 text-3xl">Hey! <%- currentuser.firstName %> <%- currentuser.lastName %></h1>
-          <a href="/sport" class="underline text-indigo-700 text-xl">Create a new sport</a>
-          
+          <% if (currentuser.role === 'Admin') { %>
+            <h1 class="text-2xl underline">Administrative Actions</h1>
+            <br>
+            <a href="/sport" class="underline text-indigo-700 text-xl">Create a new sport</a>
+          <%} else { %>
+            <h1 class="text-2xl underline">Player Actions</h1>
+          <% } %>
+          <br>          
           <%- include('sportslist.ejs', {data: sportsnames}) %>
         </div>
 
