--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,15 +24,18 @@
                     <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
                 </div>  
                 <div class="py-3"> 
-                    <button type="submit" class="mb-6 text-white bg-indigo-600 hover:bg-indigo-800 font-medium rounded px-5 py-2">Sign in</button>        
+                    <button type="submit" class="mb-2 text-white bg-indigo-600 hover:bg-indigo-800 font-medium rounded px-5 py-2">Sign in</button>        
                 </div>  
             </form>
-            <% if(messages && messages.error && messages.error.length > 0)  { %>
-              <% for(var i=0; i<messages.error.length; i++) { %>
-                      <li> <%= messages.error[i] %></li>
+            <div class="mb-6">
+              <% if(messages && messages.error && messages.error.length > 0)  { %>
+                <% for(var i=0; i<messages.error.length; i++) { %>
+                        <li> <%= messages.error[i] %></li>
+                <% } %>
               <% } %>
-            <% } %>
+            </div>
         </div>
+        
     </div>
   </body>
 </html>
