--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,17 +8,26 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./css/style.css" rel="stylesheet" />
   </head>
+  <script>
+    var token = document
+      .querySelector('meta[name="csrf-token"]')
+      .getAttribute("content");
+    function send_name(sport_name){
+      console.log(sport_name)
+      return sport_name
+    }
+  </script>
   <body>
     <%- include("header.ejs") %> 
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
           <h1 class="py-4 text-3xl">Hey! <%- currentuser.firstName %> <%- currentuser.lastName %></h1>
           <% if (currentuser.role === 'Admin') { %>
-            <h1 class="text-2xl underline">Administrative Actions</h1>
+            <h1 class="text-2xl italic">Administrative Actions</h1>
             <br>
             <a href="/sport" class="underline text-indigo-700 text-xl">Create a new sport</a>
           <%} else { %>
-            <h1 class="text-2xl underline">Player Actions</h1>
+            <h1 class="text-2xl italic">Player Actions</h1>
           <% } %>
           <br>          
           <%- include('sportslist.ejs', {data: sportsnames}) %>
