--- a/views/sportslist.ejs
+++ b/views/sportslist.ejs
@@ -4,9 +4,9 @@
         <ul class="list-disc">
             <% for (var i =0; i <data.length;  i++ ) { %>
                 <li class="Sports-Item">
-                    <div class="flex items-center py-1 px-2 my-1 text-xl">
+                    <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/sport_main/<%= data[i].id %>">
                         <%= data[i].sport_name %>
-                    </div>
+                    </a>
                   </li>
             <% } %>
         </ul>
