--- a/views/sport_main.ejs
+++ b/views/sport_main.ejs
@@ -7,15 +7,15 @@
     <meta name="csrf-token" content= "<%= csrfToken %>">
     <link href="./css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./css/style.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="bg-indigo-100">
     <%- include("header.ejs") %> 
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
            
-            <h6 class="py-4 text-2xl"><%= current_sport.sport_name %></h6>
-            <a href="/sportsession" class="underline text-indigo-700 text-xl">Create a new sport session</a>
+            <h6 class="py-4 text-3xl font-bold mb-4"><%= current_sport.sport_name %></h6>
+            <h1 class="text-2xl mb-2">Sessions</h1>
+            <a href="/sportsession/<%= current_sport.sport_name %>" class="underline text-indigo-700 text-xl">Create a new session</a>
 
             <% if(messages && messages.error && messages.error.length > 0)  { %>
                 <% for(var i=0; i<messages.error.length; i++) { %>
