home page displays sports created by specific admin

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
             <h1 class="text-2xl italic">Player Actions</h1>
           <% } %>
           <br>          
-          <%- include('sportslist.ejs', {data: sportsnames}) %>
+          <%- include('sportslist.ejs', {data: sportsnames,currentuser:currentuser}) %>
         </div>
 
         
