--- a/views/sportslist.ejs
+++ b/views/sportslist.ejs
@@ -1,16 +1,50 @@
-<div class="mt-5">
-    <% if (data.length > 0) { %>
-        <h1 class="text-2xl">Here are the sports available</h1>
-        <ul class="list-disc">
-            <% for (var i =0; i <data.length;  i++ ) { %>
-                <li class="Sports-Item">
-                    <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/sport_main/<%= data[i].id %>">
-                        <%= data[i].sport_name %>
-                    </a>
-                  </li>
-            <% } %>
-        </ul>
-    <%} else { %>
-    <p class="text-xl">There are no sports available for scheduling a session</p>
-    <% } %>
-</div>
+<% if (currentuser.role === 'Admin') { %>
+    <div class="mt-5">
+        <% if (data.length > 0) { %>
+            <h1 class="text-2xl text-indigo-700 font-bold">Created by you</h1>
+            <ul class="list-disc">
+                <% for (var i =0; i <data.length;  i++ ) { %>
+                    <%if (currentuser.id == data[i].userId) { %>
+                        <li class="Sports-Item">
+                            <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/sport_main/<%= data[i].id %>">
+                                <%= data[i].sport_name %>
+                            </a>
+                          </li>
+                    <% } %>       
+                <% } %>
+            </ul>
+            <h1 class="text-2xl text-indigo-700 font-bold">Here are the available sports</h1>
+            <ul class="list-disc">
+                <% for (var i =0; i <data.length;  i++ ) { %>
+                    <%if (currentuser.id != data[i].userId) { %>
+                        <li class="Sports-Item">
+                            <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/sport_main/<%= data[i].id %>">
+                                <%= data[i].sport_name %>
+                            </a>
+                          </li>
+                    <% } %>       
+                <% } %>
+            </ul>
+        <%} else { %>
+        <p class="text-xl">There are no sports available for scheduling a session</p>
+        <% } %>
+    </div>
+<%} else { %>
+    <div class="mt-5">
+        <% if (data.length > 0) { %>
+            <h1 class="text-2xl text-indigo-700 font-bold">Here are the sports available</h1>
+            <ul class="list-disc">
+                <% for (var i =0; i <data.length;  i++ ) { %>
+                    <li class="Sports-Item">
+                        <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/sport_main/<%= data[i].id %>">
+                            <%= data[i].sport_name %>
+                        </a>
+                      </li>
+                <% } %>
+            </ul>
+        <%} else { %>
+        <p class="text-xl">There are no sports available for scheduling a session</p>
+        <% } %>
+    </div>
+<% } %>
+    
