--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,15 +7,6 @@
     <link href="./css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <script>
-    var token = document
-      .querySelector('meta[name="csrf-token"]')
-      .getAttribute("content");
-    function send_name(sport_name){
-      console.log(sport_name)
-      return sport_name
-    }
-  </script>
   <body>
     <%- include("header.ejs") %> 
     <div class="grid grid-cols-6">
@@ -24,15 +15,16 @@
           <% if (currentuser.role === 'Admin') { %>
             <h1 class="text-2xl italic">Administrative Actions</h1>
             <br>
-            <a href="/sport" class="underline text-indigo-700 text-xl">Create a new sport</a>
+            <div style="display: flex;">
+              <a href="/sport" class="underline text-indigo-700 text-xl mr-40" >Create a new sport</a>
+              <a href="/report" class="underline text-indigo-700 text-xl">View reports</a>
+            </div> 
           <%} else { %>
             <h1 class="text-2xl italic">Player Actions</h1>
           <% } %>
           <br>          
           <%- include('sportslist.ejs', {data: sportsnames,currentuser:currentuser}) %>
         </div>
-
-        
     </div>
   </body>
 </html>
