--- a/views/new_sport.ejs
+++ b/views/new_sport.ejs
@@ -18,7 +18,7 @@
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">                
                 <div class="py-3">
                     <label for="sport_name">Enter sport's name</label>
-                    <input type="sport_name" name="sport_name" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="sport_name" name="sport_name" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
                 </div>  
                 <div class="py-3"> 
                     <button type="submit" class="text-white bg-indigo-600 hover:bg-indigo-800 font-medium rounded px-5 py-2">Submit</button>        
