--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,26 +16,26 @@
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <div class="py-3">
                     <label for="firstName">First Name:</label>
-                    <input type="text" name="firstName" class="required border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="text" name="firstName" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
                 </div>
                 <div class="py-3">
                     <label for="lastName">Last Name:</label>
-                    <input type="text" name="lastName" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="text" name="lastName" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
                 </div>
                 <div class="py-3">
                     <label for="email">Email:</label>
-                    <input type="email" name="email" class="required border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="email" name="email" class="required bg-gray-100 text-gray-900 rounded p-2 w-full">
                 </div>  
                 <div class="py-3"> 
                     <label for="password">Password:</label>
-                    <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="password" name="password" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
                 </div>   
                 <div class="py-3"> 
                     <label for="role">Role:</label>
-                    <select name="role" id="role" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <select name="role" id="role" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
                         <option value="none" selected disabled hidden>Select an Option</option>
                         <option value="Admin">Admin</option>
-                        <option value="User">User</option>
+                        <option value="User">Player</option>
                     </select>
                 </div>
                 <div class="py-3"> 
