--- a/views/sportsessions.ejs
+++ b/views/sportsessions.ejs
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="csrf-token" content= "<%= csrfToken %>">
-    <link href="./css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./css/styles.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="bg-indigo-100">
     <%- include("header.ejs") %> 
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2 ">
@@ -16,18 +16,18 @@
             <form action="/sportsession" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <input type="hidden" name="name" value="<%= current_sport_name %>">
-                <div class="py-3">
+                <div class="py-3 ">
                     <label for="date">When will this sport session be held?</label>
-                    <input type="datetime-local" name="date" class="required border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="datetime-local" name="date" class="border text-gray-900 rounded p-2 w-full bg-gray-100">
                 </div>
                 <div class="py-3">
                     <label for="address">Where will this session be played?</label>
-                    <input type="text" name="address" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="text" name="address" class="border bg-gray-100 text-gray-900 rounded p-2 w-full">
                 </div>   
                 <div class="py-3"> 
                     <label for="players">Who all will be joining you in this session? <br> ( ctrl+click for multiselect )</label>
-                    <select name="players" id="players" multiple class="border border-gray-300 text-gray-900 rounded p-2 w-full">
-                            <option value="none" selected disabled hidden>Select players</option>
+                    <select name="players" id="players" multiple class="border bg-gray-100 text-gray-900 rounded p-2 w-full">
+                            <option value="" selected disabled hidden>Select players</option>
                             <% for (var i =0; i <data.length;  i++ ) { %>
                                         <option value="<%= data[i].id %>">
                                             <%= data[i].firstName %>
@@ -35,10 +35,9 @@
                             <% } %>                        
                     </select>
                 </div>
-                
                 <div class="py-3"> 
                     <label for="count">How many more players do you need?</label>
-                    <input type="number" name="count" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <input type="number" name="count" min="0" class="border bg-gray-100 text-gray-900 rounded p-2 w-full">
                 </div>                   
                 <div class="py-3"> 
                     <button type="submit" class="mb-2 text-white bg-indigo-600 hover:bg-indigo-800 font-medium rounded px-5 py-2">Submit</button>        
