ui changed for all forms

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color:#e0e7ff;
+    background-color:#c7d2fe;
     font-family:monospace,'Courier';
 }
 .Todo-Item:hover .trash-icon{
