--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
           <% if (currentuser.role === 'Admin') { %>
             <h1 class="text-2xl italic">Administrative Actions</h1>
             <br>
-            <div style="display: flex;">
+            <div style="flex">
               <a href="/sport" class="underline text-indigo-700 text-xl mr-40" >Create a new sport</a>
               <a href="/report" class="underline text-indigo-700 text-xl">View reports</a>
             </div> 
