--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,4 +1,4 @@
-<div class="header bg-indigo-400 text-indigo-100 px-5 py-4">
+<div class="header bg-indigo-600 text-indigo-100 px-5 py-4">
     <a class=" py-2 text-3xl font-bold">Sports Scheduler</a>
-    <a class="active font-bold text-indigo-900 hover:bg-indigo-100 float-right text-xl rounded px-4 py-1" href="/signout">Sign out</a>
+    <a class="active font-bold text-indigo-100 hover:bg-indigo-100 hover:text-indigo-800 float-right text-xl rounded px-4 py-1" href="/signout">Sign out</a>
 </div>
