--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,33 +9,33 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./css/style.css" rel="stylesheet" />
   </head>
-  <body>
-    <div class="grid grid-cols-6">
-        <div class="col-start-3 col-span-2 bg-indigo-300 px-10 mt-10 rounded">
-            <h6 class="py-4 text-2xl font-bold">Login to your account</h6>
-            <form action="/session" method="post">
-                <input type="hidden" name="_csrf" value="<%= csrfToken %>">                
-                <div class="py-3">
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
-                </div>  
-                <div class="py-3"> 
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
-                </div>  
-                <div class="py-3"> 
-                    <button type="submit" class="mb-2 text-white bg-indigo-600 hover:bg-indigo-800 font-medium rounded px-5 py-2">Sign in</button>        
-                </div>  
-            </form>
-            <div class="mb-6">
-              <% if(messages && messages.error && messages.error.length > 0)  { %>
-                <% for(var i=0; i<messages.error.length; i++) { %>
-                        <li> <%= messages.error[i] %></li>
-                <% } %>
-              <% } %>
-            </div>
+  <body class="bg-indigo-400">
+    <div class="flex items-center justify-center min-h-screen">
+      <div class="bg-indigo-100 rounded-lg shadow-lg p-10">
+        <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Login to your account</h2>
+        <form action="/session" method="post">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+          <div class="mb-6">
+            <label for="email" class="text-indigo-700">Email:</label>
+            <input type="email" name="email" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
+          </div>
+          <div class="mb-6">
+            <label for="password" class="text-indigo-700">Password:</label>
+            <input type="password" name="password" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
+          </div>
+          <div class="flex justify-center">
+            <button type="submit" class="py-2 px-6 bg-indigo-700 text-white font-medium rounded hover:bg-indigo-800">Sign in</button>
+          </div>
+        </form>
+        <div class="mt-4 text-red-600">
+          <% if (messages && messages.error && messages.error.length > 0) { %>
+            <% messages.error.forEach(function(error) { %>
+              <p><%= error %></p>
+            <% }); %>
+          <% } %>
         </div>
-        
+      </div>
     </div>
   </body>
+
 </html>
