--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,10 +28,10 @@
           </div>
         </form>
         <div class="mt-4 text-red-600">
-          <% if (messages && messages.error && messages.error.length > 0) { %>
-            <% messages.error.forEach(function(error) { %>
-              <p><%= error %></p>
-            <% }); %>
+          <% if(messages && messages.error && messages.error.length > 0)  { %>
+            <% for(var i=0; i<messages.error.length; i++) { %>
+                    <li> <%= messages.error[i] %></li>
+            <% } %>
           <% } %>
         </div>
       </div>
