--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -35,7 +35,7 @@
             <select name="role" id="role" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
               <option value="none" selected disabled hidden>Select an Option</option>
               <option value="Admin">Admin</option>
-              <option value="User">Player</option>
+              <option value="Player">Player</option>
             </select>
           </div>
           <div class="flex justify-center">
