--- a/views/sportsessions.ejs
+++ b/views/sportsessions.ejs
@@ -10,7 +10,7 @@
   </head>
   <body class="bg-indigo-400">
     <%- include("header.ejs") %> 
-    <div class="flex items-center justify-center min-h-screen">
+    <div class="flex items-center justify-center mt-5">
       <div class="bg-indigo-100 rounded-lg shadow-lg p-10">
         <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Create new <%= current_sport_name %> session</h2>
         <form action="/sportsession" method="post">
