--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta content="<%= csrfToken %>" name="_csrf">
         <link href="./css/styles.css" rel="stylesheet">
         <title>Sports Scheduler</title>
         <script src="https://cdn.tailwindcss.com"></script>
