--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,4 +1,9 @@
-<div class="header bg-indigo-600 text-indigo-100 px-5 py-4">
+<div id="header" class="header bg-indigo-600 text-indigo-100 px-5 py-4">
     <a class=" py-2 text-3xl font-bold">Sports Scheduler</a>
     <a class="active font-bold text-indigo-100 hover:bg-indigo-100 hover:text-indigo-800 float-right text-xl rounded px-4 py-1" href="/signout">Sign out</a>
+    <a href="/profile" class="active float-right usericon" title="Profile">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-9 mr-2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
+          </svg>   
+    </a>
 </div>
