--- a/views/sessionslist.ejs
+++ b/views/sessionslist.ejs
@@ -5,7 +5,7 @@
             <% for (var i =0; i <data.length;  i++ ) { %>
                 <%if (userid==data[i].userId && sportid==data[i].sportId) { %>
                     <li class="Session-Item">
-                        <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/session_main">
+                        <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/session_main/<%= data[i].id %>">
                             Session # <%= data[i].id %>
                         </a>
                     </li>
@@ -17,7 +17,7 @@
             <% for (var i =0; i <data.length;  i++ ) { %>
                 <%if (userid!=data[i].userId && sportid==data[i].sportId) { %>
                     <li class="Session-Item">
-                        <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/session_main">
+                        <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/session_main/<%= data[i].id %>">
                             Session # <%= data[i].id %>
                         </a>
                     </li>
