--- a/views/sport_main.ejs
+++ b/views/sport_main.ejs
@@ -4,25 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="csrf-token" content= "<%= csrfToken %>">
+    <meta name="csrf-token" content="<%= csrfToken %>">
     <link href="./css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-indigo-200">
-    <%- include("header.ejs") %> 
+    <%- include("header.ejs") %>
     <div class="grid grid-cols-6">
-        <div class="col-start-3 col-span-2">
-           
-            <h6 class="py-4 text-3xl font-bold mb-4"><%= current_sport.sport_name %></h6>
-            <h1 class="text-2xl mb-2 font-bold">Sessions</h1>
-            
-            <%- include('sessionslist', {data: sessionDetails, userid, sportid:current_sport.id}) %>
-            
-            <div style="display: flex;">
-              <a href="/sportsession/<%= current_sport.sport_name %>" class="underline text-indigo-700 text-xl mr-20">Create a new session</a>
-              <a href="/previoussession" class="underline text-indigo-700 text-xl">View previous sessions</a>
-            </div> 
+      <div class="col-start-3 col-span-2">
+        <div class="flex justify-between items-center">
+          <h6 class="py-4 text-3xl font-bold mb-4"><%= current_sport.sport_name %></h6>
+          <% if (current_sport.userId == userid) { %>
+          <span>
+            <a href="/editsport/<%= current_sport.sport_name %>" class="mr-10 underline text-indigo-700 text-xl">Edit</a>
+            <a href="/deletesport/<%= current_sport.id %>" class="underline text-indigo-700 text-xl">Delete</a>
+          </span>
+          <% } %>
         </div>
+        <h1 class="text-2xl mb-2 font-bold">Sessions</h1>
+
+        <%- include('sessionslist', {data: sessionDetails, userid, sportid:current_sport.id}) %>
+
+        <div style="display: flex;">
+          <a href="/sportsession/<%= current_sport.sport_name %>" class="underline text-indigo-700 text-xl mr-20">Create a new session</a>
+          <a href="/previoussession" class="underline text-indigo-700 text-xl">View previous sessions</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
