--- a/views/sportsessions.ejs
+++ b/views/sportsessions.ejs
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="csrf-token" content= "<%= csrfToken %>">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./css/styles.css" rel="stylesheet" />
+    <link href="/css/styles.css" rel="stylesheet" />
   </head>
-  <body class="bg-indigo-400">
+  <body>
     <%- include("header.ejs") %> 
     <div class="flex items-center justify-center mt-5">
       <div class="bg-indigo-100 rounded-lg shadow-lg p-10">
