--- a/views/session_main.ejs
+++ b/views/session_main.ejs
@@ -4,10 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="csrf-token" content="<%= csrfToken %>">
-    <link href="./css/styles.css" rel="stylesheet" />
+    <link href="/css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>  
-  <body class="bg-indigo-200">
+  <body>
     <%- include("header.ejs") %> 
     <div class="grid grid-cols-7 gap-6 px-4">
       <div class="col-start-3 col-span-3">
