--- a/views/sport_main.ejs
+++ b/views/sport_main.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="csrf-token" content="<%= csrfToken %>">
-    <link href="./css/styles.css" rel="stylesheet" />
+    <meta content="<%= csrfToken %>" name="_csrf">
+    <link href="/css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-indigo-200">
+  <body>
     <%- include("header.ejs") %>
     <div class="grid grid-cols-6">
       <div class="col-start-3 col-span-2">
