--- a/views/cancelsession.ejs
+++ b/views/cancelsession.ejs
@@ -11,16 +11,16 @@
   <body>
     <%- include("header.ejs") %> 
     <div class="flex items-center justify-center mt-40">
-      <div class="bg-indigo-100 rounded-lg shadow-lg p-10">
-        <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Edit sport</h2>
-        <form action="/editsport/<%= sport_name %>" method="post">
+      <div class="bg-indigo-100 rounded-lg shadow-lg p-10 mx-auto">
+        <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Cancel Session</h2>
+        <form action="/cancelsession/<%= session_id %>" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <div class="mb-6">
-            <label for="sport_name" class="text-indigo-700 mb-4">Rename Sport</label>
-            <input type="text" name="sport_name" class="bg-gray-100 text-gray-900 rounded p-2 w-full mt-4">
+            <label for="reason" class="text-indigo-700 mb-4">Why do you want to cancel this sesion ?</label>
+            <input type="text" name="reason" class="bg-gray-100 text-gray-900 rounded p-2 w-full mt-4">
           </div>
           <div class="flex justify-center">
-            <button type="submit" class="py-2 px-6 bg-indigo-700 text-white font-medium rounded hover:bg-indigo-800">Update</button>
+            <button type="submit" class="py-2 px-6 bg-indigo-700 text-white font-medium rounded hover:bg-indigo-800">Cancel</button>
           </div>
         </form>
         <div class="mt-4 text-red-600">
