--- a/views/editsession.ejs
+++ b/views/editsession.ejs
@@ -40,7 +40,7 @@
             <input type="number" min="0" name="count" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
           </div>
           <div class="flex justify-center">
-            <button type="submit" class="py-2 px-6 bg-indigo-700 text-white font-medium rounded hover:bg-indigo-800">Submit</button>
+            <button type="submit" class="py-2 px-6 bg-indigo-700 text-white font-medium rounded hover:bg-indigo-800">Update</button>
           </div>
         </form>
         <div class="mt-4 text-red-600">
