--- a/views/new_sport.ejs
+++ b/views/new_sport.ejs
@@ -10,14 +10,14 @@
   </head>
   <body>
     <%- include("header.ejs") %> 
-    <div class="flex items-center justify-center h-screen">
+    <div class="flex items-center justify-center mt-40">
       <div class="bg-indigo-100 rounded-lg shadow-lg p-10">
         <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Create a new sport</h2>
         <form action="/sport" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <div class="mb-6">
             <label for="sport_name" class="text-indigo-700">Enter sport's name</label>
-            <input type="text" name="sport_name" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
+            <input type="text" name="sport_name" class="bg-gray-100 text-gray-900 rounded p-2 w-full mt-4">
           </div>
           <div class="flex justify-center">
             <button type="submit" class="py-2 px-6 bg-indigo-700 text-white font-medium rounded hover:bg-indigo-800">Submit</button>
