--- a/views/sessionslist.ejs
+++ b/views/sessionslist.ejs
@@ -1,30 +1,15 @@
 <div class="mt-5">
     <% if (data.length > 0) { %>
-        <h1 class="text-2xl text-indigo-700 font-bold mb-4">Created by you</h1>
-        <ul class="list-disc">
+        <h1 class="text-2xl text-indigo-700 font-bold mb-4"><%= title %></h1>
+        <div class="flex">
             <% for (var i =0; i <data.length;  i++ ) { %>
-                <%if (userid==data[i].userId && sportid==data[i].sportId) { %>
-                    <li class="Session-Item">
-                        <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/session_main/<%= data[i].id %>">
-                            Session # <%= data[i].id %>
-                        </a>
-                    </li>
-                <% } %>                    
+                <a href="/session_main/<%= data[i].id %>" class="Session-Item flex flex-col justify-center items-center py-2 px-4 my-2 mx-2 bg-gray-200">
+                    <span class="text-xl font-bold">Session # <%= data[i].id %></span>
+                    <span class="text-sm"><%= new Date(data[i].date).toLocaleDateString() %></span>
+                    <span class="text-sm"><%= new Date(data[i].date).toLocaleTimeString() %></span>
+                    <span class="text-sm"><%= data[i].count %> slots</span>
+                </a>                 
             <% } %>
-        </ul>
-        <h1 class="text-2xl text-indigo-700 font-bold mb-4">Other Sessions</h1>
-        <ul class="list-disc">
-            <% for (var i =0; i <data.length;  i++ ) { %>
-                <%if (userid!=data[i].userId && sportid==data[i].sportId) { %>
-                    <li class="Session-Item">
-                        <a class="flex items-center py-1 px-2 my-1 text-xl hover:underline" href="/session_main/<%= data[i].id %>">
-                            Session # <%= data[i].id %>
-                        </a>
-                    </li>
-                <% } %>                    
-            <% } %>
-        </ul>
-    <%} else { %>
-        <p class="text-xl">There are no sessions available to join right now. Create one?</p>
-    <% } %>    
+        </div>
+    <%} %>    
 </div>
