view previous sessions

--- a/views/players.ejs
+++ b/views/players.ejs
@@ -4,7 +4,7 @@
         <span class="flex items-center justify-between">
             <span class="mr-2"><%= session_players[i].firstName %></span>
             
-            <%if (session_creator === userid) { %>
+            <%if (session_creator === userid && flag==0) { %>
                 <a href="/removeplayer">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
