--- a/views/cancelsession.ejs
+++ b/views/cancelsession.ejs
@@ -13,7 +13,7 @@
     <div class="flex items-center justify-center mt-40">
       <div class="bg-indigo-100 rounded-lg shadow-lg p-10 mx-auto">
         <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Cancel Session</h2>
-        <form action="/cancelsession/<%= session_id %>" method="post">
+        <form action="/cancelsession/<%= session_id %>/<%= sport_id %>" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <div class="mb-6">
             <label for="reason" class="text-indigo-700 mb-4">Why do you want to cancel this sesion ?</label>
