--- a/views/sport_main.ejs
+++ b/views/sport_main.ejs
@@ -13,7 +13,7 @@
     <div class="grid grid-cols-7 gap-6 px-4">
       <div class="col-start-3 col-span-3">
         <div class="flex justify-between items-center">
-          <h6 class="py-4 text-3xl font-bold mb-4"><%= current_sport.sport_name %></h6>
+          <h6 class="py-4 text-3xl font-bold mb-2"><%= current_sport.sport_name %></h6>
           <% if (current_sport.userId == userid) { %>
           <span>
             <a href="/editsport/<%= current_sport.sport_name %>" class="mr-10 underline text-indigo-700 text-xl">Edit</a>
@@ -26,15 +26,16 @@
         <% if(usersessions.length < 1 && othersessions.length < 1){ %>
           <p class="text-xl font-bold text-indigo-700 mt-2 mb-2">There are no sessions available to join right now. Create one?</p>
         <% } else{ %>  
-          <%- include('sessionslist', {title:"Created by you",data: usersessions, userid, sportid:current_sport.id}) %>
-          <%- include('sessionslist', {title:"Other Available Sessions",data: othersessions, userid, sportid:current_sport.id}) %>
+          <%- include('sessionslist', {title:"Created by you",data: usersessions, flag:0,sportid:current_sport.id}) %>
+          <%- include('sessionslist', {title:"Other Available Sessions",data: othersessions,flag:0, sportid:current_sport.id}) %>
        <% } %>
 
-       <%- include('sessionslist', {title:"Joined Sessions",data: joinedsessions, userid, sportid:current_sport.id}) %>
+       <%- include('sessionslist', {title:"Joined Sessions",data: joinedsessions,flag:0, sportid:current_sport.id}) %>
+       <%- include('sessionslist', {title:"Cancelled Sessions",data: cancelsessions,flag:2, sportid:current_sport.id}) %>
 
-        <div style="display: flex;" class="mb-8">
+        <div style="display: flex;" class="mb-8 mt-4">
           <a href="/sportsession/<%= current_sport.sport_name %>" class="underline text-indigo-700 text-xl mr-20">Create a new session</a>
-          <a href="/previoussession" class="underline text-indigo-700 text-xl">View previous sessions</a>
+          <a href="/previoussession/<%= current_sport.id %>" class="underline text-indigo-700 text-xl">View previous sessions</a>
         </div>
       </div>
     </div>
