--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,7 +10,9 @@
   </head>
   <body>
     <%- include("header.ejs") %> 
-    
+    <div style="display: flex;" class="mt-4">
+      <a href="/home" class="underline text-indigo-700 text-xl ml-4">Home</a>
+    </div>
     <div class="flex items-center justify-center">
        <div>
           <h2 class="text-3xl font-bold text-center text-indigo-900 mb-6 mt-6">USER INFO</h2>
