--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
   <body>
     <%- include("header.ejs") %> 
     <div class="grid grid-cols-6">
-        <div class="col-start-3 col-span-2">
+        <div class="col-start-3 col-span-2 mb-2">
           <h1 class="py-4 text-3xl">Hey! <%- currentuser.firstName %> <%- currentuser.lastName %></h1>
           <% if (currentuser.role === 'Admin') { %>
             <h1 class="text-2xl italic">Administrative Actions</h1>
